--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 @media (min-width: 1200px) {
   #navBar {
@@ -359,8 +360,13 @@ body {
             // height: 15rem;
             width: 100%;
             align-self: stretch;
+            border-radius: 10px;
             img {
               width: 100%;
+              height: 258px;
+              object-fit: cover;
+              object-position: top;
+              border-radius: 2%;
               // height: 100%;
             }
           }
@@ -431,10 +437,189 @@ body {
             }
             .linksProject {
               display: flex;
-              gap: 1rem; 
+              gap: 1rem;
             }
           }
         }
+      }
+    }
+  }
+  #contact {
+    // layout
+    display: flex;
+    padding: 1.5625rem 9.375rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5625rem;
+    align-self: stretch;
+    .contact_heading {
+      //layout
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .headingFour {
+        display: flex;
+        padding: 0.625rem;
+        // margin: auto;
+        justify-content: center;
+        align-items: center;
+        gap: 0.5rem;
+        align-self: stretch;
+        //typography
+        text-align: center;
+        font-family: Inter;
+        font-size: 2.25rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        letter-spacing: 1px;
+      }
+      .separator {
+        //line
+        width: 16.438rem;
+        height: 0.0625rem;
+        background: var(--color-separator);
+        border: 0.5px #5e5e5e solid;
+        margin-left: 0.8rem;
+        margin-bottom: 1rem;
+      }
+    }
+    .contactForm {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 4.4375rem;
+      align-self: stretch;
+      .frameForm1 {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.9375rem;
+        flex: 1 0 0;
+        .inputBox {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 0.5625rem;
+          align-self: stretch;
+          label {
+            display: flex;
+            height: 1.5rem;
+            justify-content: center;
+            align-items: center;
+            gap: 0.625rem;
+            //Typography
+            font-size: 1.125rem;
+            font-style: normal;
+            font-weight: 600;
+            line-height: normal;
+          }
+          input {
+            // Layout
+            display: flex;
+            padding: 0.625rem;
+            align-items: center;
+            gap: 0.625rem;
+            align-self: stretch;
+            //Style
+            border-radius: 0.625rem;
+            border: 1px solid var(--Davys-Grey, #5e5e5e);
+            //Typography
+            font-size: 1.125rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+          }
+        }
+      }
+      .frameForm2 {
+        //Layout
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        gap: 0.9375rem;
+        flex: 1 0 0;
+        .inputBox {
+          //Layout
+          display: flex;
+          height: 9.875rem;
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 0.5625rem;
+          align-self: stretch;
+          label {
+            //Layout
+            display: flex;
+            height: 1.5rem;
+            justify-content: center;
+            align-items: center;
+            gap: 0.625rem;
+            flex-shrink: 0;
+            //Typography
+            font-size: 1.125rem;
+            font-style: normal;
+            font-weight: 600;
+            line-height: normal;
+          }
+          input {
+            //Layout
+            display: flex;
+            padding: 0.625rem;
+            align-items: flex-start;
+            gap: 0.625rem;
+            flex: 1 0 0;
+            align-self: stretch;
+            //Style
+            border-radius: 0.625rem;
+            border: 1px solid var(--color-separator);
+            //Typography
+            font-size: 1.125rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            padding-bottom: 100px;
+          }
+        }
+        .formBtn {
+          //Layout
+          display: flex;
+          width: 12.625rem;
+          padding: 0.625rem 2.1875rem;
+          justify-content: center;
+          align-items: center;
+          gap: 0.625rem;
+          //Style
+          border-radius: 0.625rem;
+          background: var(--color-text);
+          //Typography
+          color: var(--color-background);
+          font-size: 1.5rem;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+        }
+      }
+    }
+  }
+  #footer {
+    //Layout
+    display: flex;
+    padding: 2rem 17.5625rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5625rem;
+    align-self: stretch;
+    .socials {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 2rem;
+      align-self: stretch;
+      img {
+        width: 1.875rem;
+        height: 1.875rem;
       }
     }
   }
