--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -78,25 +78,37 @@ body {
             }
           }
           .contactMeBtn {
-            display: flex;
-            width: 12.625rem;
-            padding: 0.625rem 2.1875rem;
-            justify-content: center;
-            align-items: center;
-            gap: 0.625rem;
-            flex-shrink: 0;
-            border-radius: 0.625rem;
-            color: var(--color-background);
-            background: var(--Chinese-Black, #111);
-            font-size: 1rem;
-            font-style: normal;
-            font-weight: 400;
-            line-height: normal;
-            &:hover {
-              background-color: var(--color-background);
-              color: var(--color-text);
-              cursor: pointer;
-            }
+            //Layout
+        display: flex;
+        width: 8rem;
+        padding: 0.625rem 2.1875rem;
+        justify-content: center;
+        align-items: center;
+        gap: 0.625rem;
+        flex-shrink: 0;
+        //Style
+        border: 2px solid #5e5e5e;
+        border-radius: 0.625rem;
+        background: var(--color-text);
+        //typography
+        color: var(--color-background);
+        font-size: 1rem;
+        font-style: normal;
+        letter-spacing: 1px;
+        font-weight: 400;
+        line-height: normal;
+        text-decoration: none;
+        &:hover {
+          background-color: var(--color-background);
+          color: var(--color-text);
+          transform: none;
+        }
+        &:visited {
+          color: var(--color-background);
+        }
+        &:visited:hover {
+          color: var(--color-text);
+        }
           }
         }
       }
@@ -166,7 +178,7 @@ body {
       justify-content: center;
       align-items: center;
       gap: 3.8125rem;
-      button.projects {
+      a.projects {
         //Layout
         display: flex;
         width: 12.625rem;
@@ -178,21 +190,28 @@ body {
         background-color: var(--color-background);
         //Style
         border-radius: 0.625rem;
-        border: 1px solid --color-text;
+        border: 2px solid #5e5e5e;
         background: var(--color-background);
         // Typography
         font-family: Inter;
         font-size: 1.3rem;
-        font-style: normal;
+        text-decoration: none;
         letter-spacing: 1px;
         font-weight: 400;
         line-height: normal;
+        font-style: normal;
         &:hover {
           background-color: var(--color-text);
           color: var(--color-background);
         }
+        &:visited {
+          color: var(--color-text);
+        }
+        &:visited:hover {
+          color: var(--color-background);
+        }
       }
-      button.contact {
+      a.contact {
         //Layout
         display: flex;
         width: 12.625rem;
@@ -202,6 +221,7 @@ body {
         gap: 0.625rem;
         flex-shrink: 0;
         //Style
+        border: 2px solid #5e5e5e;
         border-radius: 0.625rem;
         background: var(--color-text);
         //typography
@@ -211,12 +231,19 @@ body {
         letter-spacing: 1px;
         font-weight: 400;
         line-height: normal;
+        text-decoration: none;
         &:hover {
           background-color: var(--color-background);
           color: var(--color-text);
         }
+        &:visited {
+          color: var(--color-background);
+        }
+        &:visited:hover {
+          color: var(--color-text);
+        }
       }
-      button:hover {
+      a:hover {
         cursor: pointer;
       }
     }
@@ -383,8 +410,7 @@ body {
           flex: 1 0 0;
           width: 32rem;
           position: relative;
-          
-          
+
           .cardImg {
             //layout
             // height: 15rem;
@@ -392,43 +418,43 @@ body {
             align-self: stretch;
             border-radius: 10px;
             .projectHover {
-            // opacity: 1;
-            z-index: 9;
-            position: absolute;
-            top: 16%;
-            left: 49%;
-            transform: translate(-50%, -50%);
-            background-color: #081c15a8;
-            color: white;
-            // padding: 50%;
-            opacity: 0;
-            transition: ease-in-out 0.4s;
-            width: 98%;
-            height: 32%;
-            // display: none;
-            // align-content: center;
-            text-align: center;
-          }
+              // opacity: 1;
+              z-index: 9;
+              position: absolute;
+              top: 16%;
+              left: 49%;
+              transform: translate(-50%, -50%);
+              background-color: #081c15a8;
+              color: white;
+              // padding: 50%;
+              opacity: 0;
+              transition: ease-in-out 0.4s;
+              width: 98%;
+              height: 32%;
+              // display: none;
+              // align-content: center;
+              text-align: center;
+            }
             &:hover .projectHover {
-            display: flex;
-            flex-direction: column;
-            column-gap: 15px;
-            opacity: 1;
-            border-radius: 5px;
-            margin-left: 5px;
-            margin-right: 12px;
-            padding-top: 14.5px;
-            padding-right: 10px;
-            margin-top: 7px;
-            cursor: pointer;
-            width: 97.8%;
-            height: 32%;
-            display: block;
-            position: absolute;
-            top: 16%;
-            left: 49%;
-            transform: translate(-50%, -50%);
-          }
+              display: flex;
+              flex-direction: column;
+              column-gap: 15px;
+              opacity: 1;
+              border-radius: 5px;
+              margin-left: 5px;
+              margin-right: 12px;
+              padding-top: 14.5px;
+              padding-right: 10px;
+              margin-top: 21px;
+              // cursor: pointer;
+              width: 97.8%;
+              height: 36%;
+              display: block;
+              position: absolute;
+              top: 16%;
+              left: 49%;
+              transform: translate(-50%, -50%);
+            }
             img {
               width: 100%;
               height: 258px;
@@ -438,17 +464,36 @@ body {
               // height: 100%;
             }
             &:hover .projectHover2 {
-              width: 98.1%
+              width: 98.1%;
             }
             &:hover .projectHover3 {
               width: 98.2%;
-              height: 31%;
-              margin-top: 0;
+              height: 34%;
+              margin-top: 14px;
             }
             &:hover .projectHover4 {
               width: 98.2%;
-              height: 30%;
-              margin-top: -1px;
+              height: 34%;
+              margin-top: 13px;
+            }
+            .cardProjectLinks {
+              display: flex;
+              align-items: center;
+              gap: 1.25rem;
+              flex-direction: column;
+              padding: 4.5rem;
+              h3 {
+                margin: 0.3rem;
+                font-weight: 500;
+                letter-spacing: 1px;
+              }
+              .linksProject {
+                display: flex;
+                gap: 1.7rem;
+                svg:hover {
+                  cursor: pointer;
+                }
+              }
             }
           }
           .cardHeading {
@@ -513,19 +558,6 @@ body {
                 width: 35.35px;
                 height: 35.35px;
               }
-            }
-          }
-          .cardProjectLinks {
-            display: flex;
-            align-items: flex-start;
-            gap: 1.25rem;
-            flex-direction: column;
-            h3 {
-              margin: 0;
-            }
-            .linksProject {
-              display: flex;
-              gap: 1rem;
             }
           }
         }
@@ -686,6 +718,11 @@ body {
           font-style: normal;
           font-weight: 400;
           line-height: normal;
+          &:hover {
+            background-color: var(--color-background);
+            color: var(--color-text);
+            cursor: pointer;
+          }
         }
       }
     }
