Ready for deploy

--- a/frontEnd/src/scss/main.scss
+++ b/frontEnd/src/scss/main.scss
@@ -18,7 +18,7 @@ body {
 
 // ** Mobile Design 
 
-@media (min-width: 414px) and (max-width: 743px) {
+@media (min-width: 375px) and (max-width: 743px) {
     body {
     padding-top: 102px;
   }
@@ -396,7 +396,8 @@ body {
       .headingTwo {
         display: flex;
         padding: 0.625rem;
-        // margin: auto;
+        padding-left: 0.2rem;
+        margin-left: 0.5rem;
         justify-content: center;
         align-items: center;
         gap: 0.5rem;
@@ -441,11 +442,11 @@ body {
     }
     .stack {
       text-align: center;
-      margin-left: 7rem;
+      margin-left: 9rem;
       letter-spacing: 2px;
     }
     .separator {
-      margin-left: 8.5rem;
+      margin-left: 9rem;
       width: 12rem;
       height: 0.05rem;
       background: var(--color-separator);
@@ -458,6 +459,8 @@ body {
       gap: 3rem;
       margin-top: 2rem;
       flex-wrap: wrap;
+      padding-left: 5rem;
+      width: 95%;
       li {
         //layout
         display: flex;
@@ -486,13 +489,13 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 1.5625rem;
-    align-self: stretch;
-    margin-top: 24rem;
+    margin-top: 19rem;
     .projects_heading {
       //layout
       display: flex;
       flex-direction: column;
       align-items: center;
+      margin-left: auto;
       .headingThree {
         display: flex;
         padding: 0.625rem;
@@ -523,19 +526,18 @@ body {
     .projectsGrid {
       //layout
       margin-top: 2rem;
+      margin-left: 7rem;
       display: grid;
-      place-content: center;
       flex-direction: column;
       align-items: flex-start;
       gap: 3rem;
-      align-self: stretch;
+      align-self: center;
       .projectsFrame {
         //layout
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         gap: 4rem;
-        align-self: stretch;
         .projectCard {
           //layout
           display: flex;
@@ -543,7 +545,7 @@ body {
           align-items: flex-start;
           gap: 0.5rem;
           flex: 1 0 0;
-          width: 36rem;
+          width: 30rem;
           position: relative;
 
           .cardImg {
@@ -649,7 +651,7 @@ body {
             border: 0.4px #5e5e5e solid;
             margin: auto;
             margin-bottom: 1rem;
-            width: 32.09375rem;
+            width: 30rem;
             height: 0.06rem;
           }
           .cardBody {
@@ -702,12 +704,12 @@ body {
   #contact {
     // layout
     display: flex;
-    padding: 1.5625rem 7rem;
+    padding: 1.5625rem 3rem;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     gap: 1.5625rem;
-    align-self: stretch;
+    margin-left:1rem;
+    width: 100vw;
     .contact_heading {
       //layout
       display: flex;
@@ -742,9 +744,9 @@ body {
     }
     .contactForm {
       display: flex;
+      flex-direction: column;
       justify-content: center;
-      align-items: flex-start;
-      gap: 4.4375rem;
+      gap: 2rem;
       align-self: stretch;
       .frameForm1 {
         display: flex;
@@ -1848,6 +1850,123 @@ body {
             }
           }
         }
+      }
+    }
+    .navBar_Mobile {
+      display: none;
+      opacity: 0;
+      position: fixed;
+      top: 0rem;
+      right: 0rem;
+      background-color: rgba(128, 128, 128, 0.571);
+      width: 100%;
+      height: 100%;
+      justify-content: start;
+      align-items: center;
+      z-index: 99;
+      transition: opacity 0.7s ease-in-out;
+      .navBarModal {
+        position: absolute;
+        right: 0;
+        padding: 3rem;
+        height: 100%;
+        background-color: var(--color-separator);
+        button {
+          position: absolute;
+          top: 0;
+          right: 0;
+          margin: 0.5rem;
+          background-color: transparent;
+          border:none;
+          width: 64px;
+          img {
+            width: 100%;
+          }
+        }
+        .linksMenu {
+          margin-top: 3.5rem;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          gap: 5rem;
+          list-style: none;
+          padding-left: 10px;
+          padding-right: 20px;
+          li {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            a {
+              font-size: 18px;
+              text-decoration: none;
+              color: var(--color-background);
+              transition: transform 0.3s ease, box-shadow 0.2s ease;
+              &::before {
+                content: "";
+                position: absolute;
+                bottom: -2px; /* Controla la distancia de la línea desde el texto */
+                left: 0;
+                width: 100%;
+                height: 2px; /* Grosor de la línea */
+                background-color: var(--color-text);
+                transform: scaleX(0); /* Inicialmente, la línea está oculta */
+                transform-origin: right; /* Hacemos que la transformación comience desde la derecha */
+                transition: transform 0.2s ease; /* Agrega una transición para transform */
+              }
+              &:hover {
+                transform: translateY(-2px);
+                // box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
+              }
+              &:hover::before {
+                transform: scaleX(1);
+                transform-origin: left;
+              }
+            }
+            .contactMeBtn {
+              //Layout
+              display: flex;
+              width: 8rem;
+              padding: 0.625rem 2.1875rem;
+              justify-content: center;
+              align-items: center;
+              gap: 0.625rem;
+              flex-shrink: 0;
+              //Style
+              border: 2px solid #5e5e5e;
+              border-radius: 0.625rem;
+              background: var(--color-text);
+              //typography
+              color: var(--color-background);
+              font-size: 1.1rem;
+              font-style: normal;
+              letter-spacing: 1px;
+              font-weight: 400;
+              line-height: normal;
+              text-decoration: none;
+              &:hover {
+                background-color: var(--color-background);
+                color: var(--color-text);
+                transform: none;
+              }
+              &:visited {
+                color: var(--color-background);
+              }
+              &:visited:hover {
+                color: var(--color-text);
+              }
+            }
+          }
+        }
+      }
+    }
+    .menuModalBtn {
+      display: none;
+      width: 60px;
+      background-color: transparent;
+      border: none;
+      margin-right: 4rem;
+      img {
+        width: 100%;
       }
     }
   }
