--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,12 +7,14 @@
   //Fonts
   --Font-family: "Inter", sans-serif;
 }
+* {
+  box-sizing: border-box;
+}
 body {
   font-family: var(--Font-family);
   margin: 0;
   padding: 0;
   border: 0;
-  box-sizing: border-box;
   overflow-x: hidden;
 }
 
@@ -20,21 +22,21 @@ body {
 
 @media (min-width: 375px) and (max-width: 743px) {
     body {
-    padding-top: 102px;
+    padding-top: 80px;
   }
   #navBar {
     background-color: var(--color-background);
     position:fixed;
     top: 0;
-    // width: 100vw;
+    min-width: 375px;
     display: flex;
-    padding: 1.5rem 2rem;
+    padding: 1.5rem 0.3rem;
     // width: 100vw;
-    justify-content: space-between;
+    // justify-content: space-between;
     align-items: center;
     align-self: stretch;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    gap: 145px;
+    gap: 50px;
     z-index: 6;
     .logo {
       display: flex;
@@ -43,7 +45,7 @@ body {
         display: flex;
         align-items: center;
         font-weight: 900;
-        font-size: 30px;
+        font-size: 24px;
         letter-spacing: 3px;
         width: max-content;
         // word-wrap: break-word;
@@ -232,10 +234,10 @@ body {
       }
     }
     .menuModalBtn {
-      width: 60px;
+      width: 40px;
       background-color: transparent;
       border: none;
-      margin-right: 4rem;
+      // margin-right: 4rem;
       img {
         width: 100%;
       }
@@ -243,13 +245,17 @@ body {
   }
   #hero {
     display: flex;
-    padding: 1.5625rem 16.875rem;
+    padding: 1rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 0.625rem;
     align-self: stretch;
-    .heroText {
+    .heroContent {
+      display: flex;
+      flex-direction: column;
+      max-width: 100vw;
+      .heroText {
       display: flex;
       flex-direction: column;
       margin-top: 3rem;
@@ -257,6 +263,7 @@ body {
       align-items: center;
       gap: 1.5625rem;
       align-self: stretch;
+      max-width: 100vw;
       .heroTitle {
         color: var(--Chinese-Black, #111);
         text-align: center;
@@ -282,7 +289,7 @@ body {
       }
       .body {
         display: flex;
-        padding: 0.625rem 3.125rem;
+        padding: 0.625rem 0;
         justify-content: center;
         align-items: center;
         gap: 0.625rem;
@@ -301,10 +308,10 @@ body {
       margin: auto;
       margin-top: 1.5rem;
       display: flex;
-      width: 29.0625rem;
-      justify-content: center;
+      width: 100%;
+      justify-content: space-between;
       align-items: center;
-      gap: 3.8125rem;
+      gap: 2rem;
       a.projects {
         //Layout
         display: flex;
@@ -374,15 +381,17 @@ body {
         cursor: pointer;
       }
     }
+    }
+    
   }
   #about {
     //layout
-    margin-top: 18rem;
+    margin-top: 20rem;
     display: grid;
     place-content: center;
     // display: none;
     height: 25.3125rem;
-    padding: 3rem 2rem;
+    padding: 5rem 2rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -392,7 +401,8 @@ body {
       display: grid;
       place-content: center;
       flex-direction: column;
-      justify-content: end;
+      padding-top: 7rem;
+      // justify-content: end;
       .headingTwo {
         display: flex;
         padding: 0.625rem;
@@ -423,10 +433,10 @@ body {
     }
     .about_body {
       // Layout
-      width: 130%;
+      max-width: 100%;
       display: flex;
       flex-direction: column;
-      padding: 0.625rem;
+      padding: 0.5rem;
       align-items: center;
       // Typography
       p {
@@ -440,13 +450,17 @@ body {
         line-height: 1.6rem;
       }
     }
-    .stack {
+    .about_stack {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      .stack {
       text-align: center;
-      margin-left: 9rem;
+      // margin-left: 9rem;
       letter-spacing: 2px;
     }
     .separator {
-      margin-left: 9rem;
       width: 12rem;
       height: 0.05rem;
       background: var(--color-separator);
@@ -456,11 +470,12 @@ body {
       // layout
       display: flex;
       align-items: center;
-      gap: 3rem;
-      margin-top: 2rem;
+      justify-content: center;
+      gap: 2rem;
+      margin-top: 4rem;
       flex-wrap: wrap;
-      padding-left: 5rem;
-      width: 95%;
+      padding-left: 1px;
+      // width: 95%;
       li {
         //layout
         display: flex;
@@ -479,23 +494,27 @@ body {
           width: 45.35px;
           height: 45.35px;
         }
+        p {
+          font-weight: 600;
+        }
       }
     }
+    }
+    
   }
   #projects {
     //layout
     display: flex;
-    padding: 1.2rem 2rem;
+    padding: 1.2rem 1rem;
     flex-direction: column;
     align-items: center;
     gap: 1.5625rem;
-    margin-top: 19rem;
+    margin-top: 26rem;
     .projects_heading {
       //layout
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-left: auto;
       .headingThree {
         display: flex;
         padding: 0.625rem;
@@ -526,7 +545,7 @@ body {
     .projectsGrid {
       //layout
       margin-top: 2rem;
-      margin-left: 7rem;
+      
       display: grid;
       flex-direction: column;
       align-items: flex-start;
