--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,15 +28,15 @@ body {
     background-color: var(--color-background);
     position:fixed;
     top: 0;
-    min-width: 375px;
+    min-width: 100vw;
     display: flex;
-    padding: 1.5rem 0.3rem;
+    padding: 1.5rem 0.4rem;
     // width: 100vw;
-    // justify-content: space-between;
+    justify-content: space-between;
     align-items: center;
     align-self: stretch;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    gap: 50px;
+    // gap: 50px;
     z-index: 6;
     .logo {
       display: flex;
@@ -235,9 +235,10 @@ body {
       }
     }
     .menuModalBtn {
-      width: 40px;
+      width: 45px;
       background-color: transparent;
       border: none;
+      margin: 0.4rem;
       // margin-right: 4rem;
       img {
         width: 100%;
@@ -306,13 +307,13 @@ body {
       }
     }
     .heroCTAs {
-      margin: auto;
-      margin-top: 1.5rem;
+      padding: 1.5rem 0.8rem;
+      // margin-top: 1.5rem;
       display: flex;
       width: 100%;
       justify-content: space-between;
       align-items: center;
-      gap: 2rem;
+      // gap: 0.5rem;
       a.projects {
         //Layout
         display: flex;
@@ -387,7 +388,7 @@ body {
   }
   #about {
     //layout
-    margin-top: 20rem;
+    margin-top: 18rem;
     display: grid;
     place-content: center;
     // display: none;
