--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,19 +23,26 @@ body {
 @media (min-width: 375px) and (max-width: 743px) {
     body {
     padding-top: 80px;
+    background: rgb(58,180,177);
+background: linear-gradient(84deg, rgba(58,180,177,1) 25%, rgba(51,48,65,1) 96%);
+color: white;
   }
   #navBar {
-    background-color: var(--color-background);
+    
+background: rgb(58,180,177);
+background: linear-gradient(335deg, rgba(58,180,177,1) 25%, rgba(51,48,65,1) 96%);
+// color: #ffffff;
     position:fixed;
     top: 0;
     min-width: 100vw;
     display: flex;
-    padding: 1.5rem 0.4rem;
+    padding: 1.5rem 0.7rem;
     // width: 100vw;
     justify-content: space-between;
     align-items: center;
     align-self: stretch;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 0 0 3% 3%;
     // gap: 50px;
     z-index: 6;
     .logo {
@@ -235,7 +242,7 @@ body {
       }
     }
     .menuModalBtn {
-      width: 45px;
+      width: 40px;
       background-color: transparent;
       border: none;
       margin: 0.4rem;
@@ -267,7 +274,7 @@ body {
       align-self: stretch;
       max-width: 100vw;
       .heroTitle {
-        color: var(--Chinese-Black, #111);
+        
         text-align: center;
         font-family: Inter;
         font-size: 3rem;
@@ -307,7 +314,7 @@ body {
       }
     }
     .heroCTAs {
-      padding: 1.5rem 0.8rem;
+      padding: 1.5rem 2.8rem;
       // margin-top: 1.5rem;
       display: flex;
       width: 100%;
@@ -926,13 +933,13 @@ body {
     top: 0;
     width: 100vw;
     display: flex;
-    padding: 1.5rem 2rem;
+    padding: 1.5rem 1rem;
     // width: 100vw;
     justify-content: space-between;
     align-items: center;
     align-self: stretch;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    gap: 150px;
+    // gap: 150px;
     z-index: 6;
     .logo {
       display: flex;
@@ -941,7 +948,7 @@ body {
         display: flex;
         align-items: center;
         font-weight: 900;
-        font-size: 32px;
+        font-size: 28px;
         letter-spacing: 3px;
         word-wrap: break-word;
       }
@@ -989,7 +996,7 @@ body {
             //Layout
             display: flex;
             width: 8rem;
-            padding: 0.625rem 2.1875rem;
+            padding: 0.625rem 2rem;
             justify-content: center;
             align-items: center;
             gap: 0.625rem;
@@ -1129,10 +1136,10 @@ body {
       }
     }
     .menuModalBtn {
-      width: 60px;
+      width: 50px;
       background-color: transparent;
       border: none;
-      margin-right: 4rem;
+      
       img {
         width: 100%;
       }
@@ -1334,7 +1341,14 @@ body {
         line-height: 1.6rem;
       }
     }
-    .stack {
+    .about_stack {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .stack {
+      display: flex;
+      flex-direction: column;
+      align-self: center;
       letter-spacing: 2px;
     }
     .separator {
@@ -1345,10 +1359,12 @@ body {
     }
     .about_techStackList {
       // layout
+      width: 100vw;
       display: flex;
-      align-items: flex-start;
+      margin-top: 3rem;
       gap: 3rem;
-      margin-top: 2rem;
+      padding: 0 2.5rem;
+      justify-content: space-between;
       flex-wrap: wrap;
       li {
         //layout
@@ -1365,11 +1381,13 @@ body {
           transform: scale(1.2);
         }
         img {
-          width: 45.35px;
-          height: 45.35px;
+          width: 55px;
+          height: 55px;
         }
       }
     }
+    }
+    
   }
   #projects {
     //layout
@@ -1379,7 +1397,7 @@ body {
     align-items: center;
     gap: 1.5625rem;
     align-self: stretch;
-    margin-top: 24rem;
+    margin-top: 32rem;
     .projects_heading {
       //layout
       display: flex;
@@ -1570,7 +1588,7 @@ body {
             // layout
             display: flex;
             align-items: flex-start;
-            gap: 2.25rem;
+            gap: 4.25rem;
             padding-left: 0;
             li {
               //layout
@@ -1782,18 +1800,18 @@ body {
 @media (min-width: 1200px) {
   #navBar {
     display: flex;
-    padding: 1.5rem 2rem;
+    padding: 1rem 2rem;
     width: 100vw;
     justify-content: space-between;
     align-items: center;
     align-self: stretch;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    gap: 20px;
+    
     .logo {
       display: flex;
       align-items: center;
       // overflow-x: hidden;
-      height: 5rem;
+     
       .name {
         display: flex;
         align-items: center;
@@ -1807,7 +1825,6 @@ body {
       display: flex;
       justify-content: start;
       align-items: center;
-      margin-right: 5rem;
       .linksMenu {
         display: flex;
         justify-content: space-between;
@@ -1998,11 +2015,11 @@ body {
   }
   #hero {
     display: flex;
-    padding: 1.5625rem 16.875rem;
+    padding: 1.5625rem 6.875rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 0.625rem;
+    gap: 3.625rem;
     align-self: stretch;
     .heroText {
       display: flex;
@@ -2054,12 +2071,12 @@ body {
     }
     .heroCTAs {
       margin: auto;
-      margin-top: 1.5rem;
+      margin-top: 2.5rem;
       display: flex;
       width: 29.0625rem;
       justify-content: center;
       align-items: center;
-      gap: 3.8125rem;
+      gap: 12rem;
       a.projects {
         //Layout
         display: flex;
@@ -2134,7 +2151,7 @@ body {
     //layout
     display: flex;
     height: 25.3125rem;
-    padding: 5rem 16.875rem;
+    padding: 2rem 8.875rem;
     flex-direction: column;
     justify-content: start;
     align-items: center;
@@ -2192,7 +2209,14 @@ body {
         line-height: 1.6rem;
       }
     }
-    .stack {
+    .about_stack {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .stack {
+      display: flex;
+      flex-direction: column;
+      align-self: center;
       letter-spacing: 2px;
     }
     .separator {
@@ -2203,11 +2227,13 @@ body {
     }
     .about_techStackList {
       // layout
+      width: 100vw;
       display: flex;
-      align-items: flex-start;
-      gap: 2.5rem;
-      margin-top: 2rem;
-
+      margin-top: 3rem;
+      gap: 3rem;
+      padding: 0 2.5rem;
+      justify-content: space-between;
+      flex-wrap: wrap;
       li {
         //layout
         display: flex;
@@ -2223,21 +2249,22 @@ body {
           transform: scale(1.2);
         }
         img {
-          width: 45.35px;
-          height: 45.35px;
+          width: 55px;
+          height: 55px;
         }
       }
+    }
     }
   }
   #projects {
     //layout
     display: flex;
-    padding: 1.2rem 2rem;
+    padding: 1rem 2rem;
     flex-direction: column;
     align-items: center;
     gap: 1.5625rem;
     align-self: stretch;
-    margin-top: 12rem;
+    margin-top: 14rem;
     .projects_heading {
       //layout
       display: flex;
@@ -2275,6 +2302,7 @@ body {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      padding-top: 3rem;
       gap: 3rem;
       align-self: stretch;
       .projectsFrame {
@@ -2424,6 +2452,7 @@ body {
           .cardTechStackList {
             // layout
             display: flex;
+            flex-wrap: wrap;
             align-items: flex-start;
             gap: 2.25rem;
             padding-left: 0;
