--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2821,7 +2821,7 @@ body {
                 display: flex;
                 justify-content: space-around;
                 align-items: center;
-                padding: 10px 0 15px;
+                padding: 13px 0 15px;
                 width: 100%;
                 height: 45px;
                 background-color: whitesmoke;
@@ -2835,7 +2835,7 @@ body {
                 //* To change size of iconds in DOCk
                 .dock_imgContainer {
                   // padding: 1px 2px;
-                  background: white;
+                  // background: white;
                   height: 35px;
                   width: 35px;
                   border-radius: 10%;
@@ -2847,11 +2847,12 @@ body {
                     z-index: 99;
                   }
                   .img-size {
-                    padding-top: 1px;
+                    // padding-top: 1px;
                     width: 100%;
                     height: 100%;
                     opacity: 1;
                     z-index: 10;
+                    object-fit: fill;
                   }
                 }
               }
@@ -2980,7 +2981,7 @@ body {
                 height: 341px;
                 position: absolute;
                 top: 15px;
-                // left: 3px;
+                
                 object-fit: inherit;
                 border-radius: 0;
                 object-position: center;
